# app/Http/Requests/StoreWebinarQuestionsRequests.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreWebinarRequest extends FormRequest
+class StoreWebinarQuestionsRequests extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -22,15 +22,7 @@ class StoreWebinarRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'title' => ['required', 'string'],
-            'date' => ['required', 'string'],
-            'timeStart' => ['string'],
-            'timeEnd' => ['string'],
-            'lectorName' => ['string'],
-            'logo' => ['image:jpg,jpeg,png'],
-            'cost' => ['numeric'],
-            'videoLink' => ['string'],
-            'webinarCategoryId' => ['required', 'numeric'],
+            'questionText' => ['required', 'string']
         ];
     }
 }
